# secunda_test_task

./: .env.example  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  dependencies.py  main.py  repositories.py
app/api/: router.py
app/api/v1/: activities.py  buildings.py  organizations.py
app/core/: config.py  db.py  security.py
app/models/: activities.py  base.py  building.py  organization.py  phone_number.py
app/schemas/: activity.py  building.py  organization.py
app/services/: activity_tree.py
